--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Hong Kong Restaurant Dynamics • Interactive (Clean v3)</title>
+<title>Hong Kong Restaurant Dynamics • Interactive (Clean v4)</title>
 <link rel="preconnect" href="https://cdn.jsdelivr.net">
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
@@ -42,13 +42,14 @@ thead th{border-bottom:2px solid var(--border);background:#0a1020}
 tbody tr:nth-child(odd){background:rgba(255,255,255,.02)}
 .caption{color:var(--muted);font-size:13px;margin-top:6px}
 .smallnote{color:var(--muted);font-size:12px}
+.empty{display:flex;align-items:center;justify-content:center;height:520px;color:var(--muted);}
 </style>
 </head>
 <body>
 <div class="container">
   <header>
     <h1>Hong Kong Restaurant Dynamics • Interactive (2016–2025)</h1>
-    <span class="badge">Clean sidebar v3 • High-contrast</span>
+    <span class="badge">Clean sidebar v4 • High-contrast</span>
   </header>
 
   <div class="grid">
@@ -131,17 +132,22 @@ const state = { ycWide:null, totals:null, years:[], cuisines:[], view:'total' };
 function csvUrl(name){ return './data/' + name; }
 
 async function loadData(){
-  const [wide, totals] = await Promise.all([parseCSV(csvUrl('year_cuisine_counts_wide.csv')), parseCSV(csvUrl('yearly_totals_summary.csv'))]);
-  state.ycWide = wide;
-  state.totals = totals;
-  state.years = wide.map(r => +r['__Year']);
-  state.cuisines = Object.keys(wide[0]).filter(k => k !== '__Year']);
-
-  document.getElementById('yearStart').value = 2016;
-  document.getElementById('yearEnd').value = 2025;
-
-  renderCuisineList(state.cuisines);
-  render();
+  try {
+    const [wide, totals] = await Promise.all([parseCSV(csvUrl('year_cuisine_counts_wide.csv')), parseCSV(csvUrl('yearly_totals_summary.csv'))]);
+    state.ycWide = wide;
+    state.totals = totals;
+    state.years = wide.map(r => +r['__Year']);
+    state.cuisines = Object.keys(wide[0]).filter(k => k !== '__Year'); // FIXED
+    document.getElementById('yearStart').value = 2016;
+    document.getElementById('yearEnd').value = 2025;
+    renderCuisineList(state.cuisines);
+    render();
+  } catch(e) {
+    const el = document.getElementById('chart');
+    el.className = 'empty';
+    el.textContent = 'CSV not found. Put year_cuisine_counts_wide.csv and yearly_totals_summary.csv under ./data/';
+    console.error(e);
+  }
 }
 
 function parseCSV(url){
@@ -157,7 +163,7 @@ function renderCuisineList(list){
   list.forEach(c => {
     const id = 'c_' + c.replace(/\W+/g,'_');
     const div = document.createElement('div');
-    div.innerHTML = `<label><input type="checkbox" value="${c}" id="${id}"><span>${c}</span></label>`;
+    div.innerHTML = `<label><input type="checkbox" value="\${c}" id="\${id}"><span>\${c}</span></label>`;
     wrap.appendChild(div);
   });
 }
@@ -212,7 +218,7 @@ function cuisineLineSelected(){
   const layout = baseLayoutTime('Cuisine line (selected)');
   layout.yaxis.title = 'Count';
   Plotly.newPlot('chart', data, layout, {displayModeBar:true});
-  setCaption('Cuisine line: plots the checked cuisines as separate lines for side-by-side comparison. If none are checked, it falls back to Top 8 in the selected window.');
+  setCaption('Cuisine line: plots the checked cuisines as separate lines for side-by-side comparison.');
 }
 
 function netChange(){
@@ -250,7 +256,7 @@ function indexedGrowth(){
     const y = rows.map(r => baseVal? ((+r[c])/baseVal)*100 : 0);
     return { x: years, y, mode:'lines+markers', name:c, line:{width:3}, marker:{size:7} };
   });
-  const layout = baseLayoutTime(`Indexed growth by cuisine (base=${years[0]}=100)`);
+  const layout = baseLayoutTime(`Indexed growth by cuisine (base=\${years[0]}=100)`);
   layout.yaxis.title = 'Index';
   Plotly.newPlot('chart', data, layout, {displayModeBar:true});
   setCaption('Relative growth with base-year = 100.');
@@ -304,20 +310,20 @@ function diversity(){
 function renderTable(){
   const {rows, use, years} = getFiltered();
   const head = ['Cuisine'].concat(years.map(y=>String(y)));
-  let html = '<table><thead><tr>'+ head.map(h=>`<th>${h}</th>`).join('') + '</tr></thead><tbody>';
+  let html = '<table><thead><tr>'+ head.map(h=>`<th>\${h}</th>`).join('') + '</tr></thead><tbody>';
   use.forEach(c => {
-    let tr = `<td>${c}</td>`;
+    let tr = `<td>\${c}</td>`;
     rows.forEach((r,i)=>{
       const val = (+r[c]||0);
-      if(i===0){ tr += `<td>${val}</td>`; }
+      if(i===0){ tr += `<td>\${val}</td>`; }
       else {
         const prev = (+rows[i-1][c]||0);
         const pct = prev? (((val-prev)/prev*100).toFixed(1))+'%' : 'n/a';
         const sign = (prev && (val-prev)>=0) ? '+' : '';
-        tr += `<td>${val} (${sign}${pct})</td>`;
+        tr += `<td>\${val} (\${sign}\${pct})</td>`;
       }
     });
-    html += `<tr>${tr}</tr>`;
+    html += `<tr>\${tr}</tr>`;
   });
   html += '</tbody></table>';
   document.getElementById('tableWrap').innerHTML = html;
@@ -363,9 +369,16 @@ function vertRefs(){
   });
   return refs;
 }
-function sumCuisine(row){ return Object.keys(row).reduce((acc,k)=> k==='__Year'? acc : acc + (+row[k]||0), 0); }
-function setActive(btn){ document.querySelectorAll('.tabbar .btn').forEach(b=>b.classList.remove('active')); btn.classList.add('active'); }
-function setCaption(text){ document.getElementById('caption').textContent = text; }
+function sumCuisine(row){
+  return Object.keys(row).reduce((acc,k)=> k==='__Year'? acc : acc + (+row[k]||0), 0);
+}
+function setActive(btn){
+  document.querySelectorAll('.tabbar .btn').forEach(b=>b.classList.remove('active'));
+  btn.classList.add('active');
+}
+function setCaption(text){
+  document.getElementById('caption').textContent = text;
+}
 function render(){
   document.getElementById('tableWrap').style.display='none';
   document.getElementById('chart').style.display='block';
@@ -398,7 +411,7 @@ document.querySelectorAll('.tabbar .btn').forEach(b=>{
 });
 
 // Auto-load defaults
-loadData().catch(()=>{ console.warn('Waiting for CSVs in ./data/.'); });
+loadData();
 </script>
 </body>
 </html>
